objects/Contact_Information__c.object
<CustomObject>
    <description>This table contains one record per contact point. A contact point is defined as a method for contacting the customer (examples include: Email, Phone, Social Handles).</description>
    <fields>
        <fullName>Contact_Info_Relationship_Match_Key__c</fullName>
        <description>This field is used for the building of &quot;same person&quot; relationships. It builds a map of Last Name + First Name + Medium + (Email or Phone)</description>
        <externalId>true</externalId>
        <label>Contact Info Relationship Match Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Information_Description__c</fullName>
        <label>Contact Information Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Information_Match_Key_Hash__c</fullName>
        <description>This is a hashed version of the Contact Information Match Key (Contact ID + Contact Info Medium + (Email or Phone)</description>
        <externalId>true</externalId>
        <label>Contact Information Match Key Hash</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Information_Match_Key__c</fullName>
        <label>Contact Information Match Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Information_Medium_Text__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Information Medium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Information_Medium__c</fullName>
        <label>Contact Information Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Information_Type__c</fullName>
        <label>Contact Information Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Business Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Personal Email</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Information</relationshipLabel>
        <relationshipName>Contact_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Details__c</fullName>
        <formula>Customer_Address__r.Address_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Address</label>
        <referenceTo>Customer_Address__c</referenceTo>
        <relationshipName>Contact_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether or not this Contact Information record is Active</description>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Information__c</fullName>
        <label>Other Contact Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Contact Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Contact_Information_Type__c</columns>
        <columns>Contact_Information_Medium__c</columns>
        <columns>Contact_Information_Description__c</columns>
        <columns>Customer_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Information</pluralLabel>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <description>For email contact information</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fax</fullName>
        <active>true</active>
        <description>For fax contact information</description>
        <label>Fax</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>For other contact information</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <description>For phone contact information</description>
        <label>Phone</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Active_Contact_Information_is_Primary</fullName>
        <active>true</active>
        <description>Prevents users from making non active contact information primary</description>
        <errorConditionFormula>AND(
OR($Profile.Name = &quot;CSC Advocate&quot; , $Profile.Name = &quot;Gallery&quot;),

AND( Is_Inactive__c = TRUE, Is_Primary__c = TRUE)
)</errorConditionFormula>
        <errorMessage>You cannot mark a primary phone or email address as inactive. Choose or create a different primary phone or email address before marking this one as inactive.</errorMessage>
    </validationRules>
</CustomObject>